Fix liste à puce version mobile journée du vendredi

--- a/src/components/Templates/_Template7.scss
+++ b/src/components/Templates/_Template7.scss
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: column;
 
+    p {
+        padding: 2rem;
+
+        ul {
+            list-style-type: disc;
+            list-style-position: outside;
+            margin: 1rem 0 0 3rem;
+        }
+    }
     p,
     img {
         position: relative;
@@ -58,14 +67,10 @@
         margin-bottom: -10rem;
 
         p {
-            padding: 2rem;
             ul {
-                list-style-type: disc;
-                list-style-position: outside;
-                margin: 3rem 0 0 3rem;
+                margin: 1rem 0 0 3rem;
             }
         }
-
         p.title {
             grid-column-start: 4;
             grid-column-end: 7;
